<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text" />
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_post_save">Post save</string>
    <string name="description_undo_editing">Undo editing</string>
    <string name="description_post_view">Post view</string>
    <string name="description_post_edit">Post edit</string>
    <string name="post_likeCount">Post likeCount</string>
    <string name="post_shareCount">Post shareCount</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="description_post_video_cover">Video cover</string>
    <string name="description_play_button">Play button</string>
    <string name="draft_content" translatable="false">draftContent</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">User %1$s published new post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="empty">Empty</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="attachment">Attachment</string>

</resources>